--- a/src/gui/mainmenu.ui
+++ b/src/gui/mainmenu.ui
@@ -6,51 +6,51 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>925</width>
-    <height>525</height>
+    <width>920</width>
+    <height>560</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>925</width>
+    <width>920</width>
     <height>525</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>925</width>
-    <height>525</height>
+    <height>700</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>MainMenu</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QGroupBox" name="groupBox">
+   <widget class="QGroupBox" name="mainGB">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>80</y>
-      <width>901</width>
-      <height>411</height>
+      <width>900</width>
+      <height>440</height>
      </rect>
     </property>
     <property name="title">
      <string/>
     </property>
-    <widget class="QGroupBox" name="groupBox_2">
+    <widget class="QGroupBox" name="marcasGB">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>0</y>
-       <width>151</width>
-       <height>401</height>
+       <width>150</width>
+       <height>430</height>
       </rect>
      </property>
      <property name="title">
       <string>Marcas</string>
      </property>
-     <widget class="QListView" name="listView">
+     <widget class="QListView" name="marcasLV">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -60,20 +60,62 @@
        </rect>
       </property>
      </widget>
+     <widget class="QPushButton" name="adMarcaBtn">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>390</y>
+        <width>40</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>+</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="remMarcaBtn">
+      <property name="geometry">
+       <rect>
+        <x>55</x>
+        <y>390</y>
+        <width>40</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>-</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="edMarcaBtn">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>390</y>
+        <width>40</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset theme="mail-message-new"/>
+      </property>
+     </widget>
     </widget>
-    <widget class="QGroupBox" name="groupBox_3">
+    <widget class="QGroupBox" name="itensGB">
      <property name="geometry">
       <rect>
        <x>180</x>
        <y>0</y>
-       <width>151</width>
-       <height>401</height>
+       <width>150</width>
+       <height>430</height>
       </rect>
      </property>
      <property name="title">
       <string>Itens</string>
      </property>
-     <widget class="QListView" name="listView_2">
+     <widget class="QListView" name="itensLV">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -82,15 +124,63 @@
         <height>360</height>
        </rect>
       </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="adItemBtn">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>390</y>
+        <width>40</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>+</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="edItemBtn">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>390</y>
+        <width>40</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset theme="mail-message-new"/>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="remItemBtn">
+      <property name="geometry">
+       <rect>
+        <x>55</x>
+        <y>390</y>
+        <width>40</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>-</string>
+      </property>
      </widget>
     </widget>
-    <widget class="QGroupBox" name="groupBox_4">
+    <widget class="QGroupBox" name="modelosGB">
      <property name="geometry">
       <rect>
        <x>350</x>
        <y>0</y>
-       <width>541</width>
-       <height>201</height>
+       <width>540</width>
+       <height>231</height>
       </rect>
      </property>
      <property name="title">
@@ -101,19 +191,67 @@
        <rect>
         <x>10</x>
         <y>30</y>
-        <width>521</width>
-        <height>151</height>
+        <width>520</width>
+        <height>160</height>
        </rect>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="adMarcaBtn_2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>190</y>
+        <width>40</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>+</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="edMarcaBtn_2">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>190</y>
+        <width>40</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset theme="mail-message-new"/>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="remMarcaBtn_2">
+      <property name="geometry">
+       <rect>
+        <x>55</x>
+        <y>190</y>
+        <width>40</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>-</string>
       </property>
      </widget>
     </widget>
-    <widget class="QGroupBox" name="groupBox_5">
+    <widget class="QGroupBox" name="infoProdGB">
      <property name="geometry">
       <rect>
        <x>350</x>
-       <y>210</y>
-       <width>541</width>
-       <height>191</height>
+       <y>240</y>
+       <width>540</width>
+       <height>190</height>
       </rect>
      </property>
      <property name="title">
@@ -124,8 +262,8 @@
        <rect>
         <x>10</x>
         <y>30</y>
-        <width>161</width>
-        <height>16</height>
+        <width>250</width>
+        <height>15</height>
        </rect>
       </property>
       <property name="text">
@@ -137,12 +275,12 @@
        <rect>
         <x>10</x>
         <y>50</y>
-        <width>251</width>
-        <height>21</height>
+        <width>250</width>
+        <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>12345</string>
+       <string/>
       </property>
       <property name="readOnly">
        <bool>true</bool>
@@ -156,12 +294,12 @@
        <rect>
         <x>10</x>
         <y>100</y>
-        <width>251</width>
-        <height>21</height>
+        <width>250</width>
+        <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>Good coffee</string>
+       <string/>
       </property>
       <property name="readOnly">
        <bool>true</bool>
@@ -175,8 +313,8 @@
        <rect>
         <x>10</x>
         <y>80</y>
-        <width>161</width>
-        <height>16</height>
+        <width>250</width>
+        <height>15</height>
        </rect>
       </property>
       <property name="text">
@@ -188,12 +326,12 @@
        <rect>
         <x>10</x>
         <y>150</y>
-        <width>251</width>
-        <height>21</height>
+        <width>250</width>
+        <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>EFFOC CORPORATION</string>
+       <string/>
       </property>
       <property name="readOnly">
        <bool>true</bool>
@@ -207,8 +345,8 @@
        <rect>
         <x>10</x>
         <y>130</y>
-        <width>161</width>
-        <height>16</height>
+        <width>250</width>
+        <height>15</height>
        </rect>
       </property>
       <property name="text">
@@ -220,12 +358,12 @@
        <rect>
         <x>270</x>
         <y>150</y>
-        <width>251</width>
-        <height>21</height>
+        <width>250</width>
+        <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>420€</string>
+       <string/>
       </property>
       <property name="readOnly">
        <bool>true</bool>
@@ -242,8 +380,8 @@
        <rect>
         <x>270</x>
         <y>130</y>
-        <width>161</width>
-        <height>16</height>
+        <width>250</width>
+        <height>15</height>
        </rect>
       </property>
       <property name="text">
@@ -255,12 +393,12 @@
        <rect>
         <x>270</x>
         <y>100</y>
-        <width>251</width>
-        <height>21</height>
+        <width>250</width>
+        <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>21</string>
+       <string/>
       </property>
       <property name="readOnly">
        <bool>true</bool>
@@ -274,8 +412,8 @@
        <rect>
         <x>270</x>
         <y>80</y>
-        <width>161</width>
-        <height>16</height>
+        <width>250</width>
+        <height>15</height>
        </rect>
       </property>
       <property name="text">
@@ -287,8 +425,8 @@
        <rect>
         <x>270</x>
         <y>30</y>
-        <width>251</width>
-        <height>16</height>
+        <width>250</width>
+        <height>15</height>
        </rect>
       </property>
       <property name="text">
@@ -300,12 +438,12 @@
        <rect>
         <x>270</x>
         <y>50</y>
-        <width>251</width>
-        <height>21</height>
+        <width>250</width>
+        <height>25</height>
        </rect>
       </property>
       <property name="text">
-       <string>Brainrot material</string>
+       <string/>
       </property>
       <property name="readOnly">
        <bool>true</bool>
@@ -315,16 +453,6 @@
       </property>
      </widget>
     </widget>
-   </widget>
-   <widget class="QGraphicsView" name="graphicsView">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>10</y>
-      <width>71</width>
-      <height>61</height>
-     </rect>
-    </property>
    </widget>
    <widget class="QGroupBox" name="groupBoxPesquisa">
     <property name="geometry">
@@ -344,13 +472,13 @@
     <property name="title">
      <string/>
     </property>
-    <widget class="QComboBox" name="comboBox">
+    <widget class="QComboBox" name="categoriaCB">
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>0</y>
-       <width>131</width>
-       <height>51</height>
+       <y>1</y>
+       <width>130</width>
+       <height>50</height>
       </rect>
      </property>
      <property name="editable">
@@ -363,33 +491,33 @@
       <string>Categoria</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="QLineEdit" name="produtoTE">
      <property name="geometry">
       <rect>
        <x>200</x>
        <y>10</y>
-       <width>161</width>
-       <height>31</height>
+       <width>160</width>
+       <height>30</height>
       </rect>
      </property>
      <property name="placeholderText">
       <string>Produto</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="textLab">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>0</y>
-       <width>58</width>
-       <height>51</height>
+       <width>55</width>
+       <height>50</height>
       </rect>
      </property>
      <property name="text">
       <string>Pesquisa</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="procuraBtn">
      <property name="geometry">
       <rect>
        <x>370</x>
@@ -403,7 +531,7 @@
      </property>
     </widget>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="nomeLojaLab">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -430,13 +558,43 @@
      <enum>Qt::TextFormat::AutoText</enum>
     </property>
    </widget>
+   <widget class="QLabel" name="logoLoja">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>15</y>
+      <width>80</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>300</width>
+      <height>300</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>20</pointsize>
+     </font>
+    </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
+    </property>
+    <property name="text">
+     <string>LOGO</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::TextFormat::AutoText</enum>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>925</width>
+     <width>920</width>
      <height>24</height>
     </rect>
    </property>
@@ -450,11 +608,11 @@
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <tabstops>
-  <tabstop>comboBox</tabstop>
-  <tabstop>lineEdit</tabstop>
-  <tabstop>pushButton</tabstop>
-  <tabstop>listView</tabstop>
-  <tabstop>listView_2</tabstop>
+  <tabstop>categoriaCB</tabstop>
+  <tabstop>produtoTE</tabstop>
+  <tabstop>procuraBtn</tabstop>
+  <tabstop>marcasLV</tabstop>
+  <tabstop>itensLV</tabstop>
   <tabstop>listView_3</tabstop>
   <tabstop>codText</tabstop>
   <tabstop>nomeText</tabstop>
@@ -462,8 +620,9 @@
   <tabstop>catText</tabstop>
   <tabstop>quantText</tabstop>
   <tabstop>precoText</tabstop>
-  <tabstop>graphicsView</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="../../../../../../../Desktop/Screenshot 2024-05-02 at 21.51.49.qrc"/>
+ </resources>
  <connections/>
 </ui>
