--- a/src/gui/mainmenu.ui
+++ b/src/gui/mainmenu.ui
@@ -38,7 +38,7 @@
     <property name="title">
      <string/>
     </property>
-    <widget class="QGroupBox" name="marcasGB">
+    <widget class="QGroupBox" name="linhasGB">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -48,9 +48,9 @@
       </rect>
      </property>
      <property name="title">
-      <string>Marcas</string>
+      <string>Linhas</string>
      </property>
-     <widget class="QListView" name="marcasLV">
+     <widget class="QListView" name="linhasLV">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -103,7 +103,7 @@
       </property>
      </widget>
     </widget>
-    <widget class="QGroupBox" name="itensGB">
+    <widget class="QGroupBox" name="produtosGB">
      <property name="geometry">
       <rect>
        <x>180</x>
@@ -113,9 +113,9 @@
       </rect>
      </property>
      <property name="title">
-      <string>Itens</string>
+      <string>Produtos</string>
      </property>
-     <widget class="QListView" name="itensLV">
+     <widget class="QListView" name="produtosLV">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -180,7 +180,7 @@
        <x>350</x>
        <y>0</y>
        <width>540</width>
-       <height>231</height>
+       <height>230</height>
       </rect>
      </property>
      <property name="title">
@@ -457,9 +457,9 @@
    <widget class="QGroupBox" name="groupBoxPesquisa">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>439</x>
       <y>15</y>
-      <width>490</width>
+      <width>471</width>
       <height>50</height>
      </rect>
     </property>
@@ -476,9 +476,9 @@
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>1</y>
+       <y>11</y>
        <width>130</width>
-       <height>50</height>
+       <height>30</height>
       </rect>
      </property>
      <property name="editable">
@@ -495,9 +495,9 @@
      <property name="geometry">
       <rect>
        <x>200</x>
-       <y>10</y>
+       <y>12</y>
        <width>160</width>
-       <height>30</height>
+       <height>25</height>
       </rect>
      </property>
      <property name="placeholderText">
@@ -507,10 +507,10 @@
     <widget class="QLabel" name="textLab">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>0</y>
+       <x>14</x>
+       <y>14</y>
        <width>55</width>
-       <height>50</height>
+       <height>20</height>
       </rect>
      </property>
      <property name="text">
@@ -522,7 +522,7 @@
       <rect>
        <x>370</x>
        <y>10</y>
-       <width>111</width>
+       <width>90</width>
        <height>32</height>
       </rect>
      </property>
@@ -614,15 +614,25 @@
   <tabstop>categoriaCB</tabstop>
   <tabstop>produtoTE</tabstop>
   <tabstop>procuraBtn</tabstop>
-  <tabstop>marcasLV</tabstop>
-  <tabstop>itensLV</tabstop>
+  <tabstop>linhasLV</tabstop>
+  <tabstop>adMarcaBtn</tabstop>
+  <tabstop>delMarcaBtn</tabstop>
+  <tabstop>edMarcaBtn</tabstop>
+  <tabstop>produtosLV</tabstop>
+  <tabstop>adItemBtn</tabstop>
+  <tabstop>delItemBtn</tabstop>
+  <tabstop>edItemBtn</tabstop>
   <tabstop>modelosLV</tabstop>
+  <tabstop>adModeloBtn</tabstop>
+  <tabstop>delModeloBtn</tabstop>
+  <tabstop>edModeloBtn</tabstop>
   <tabstop>codText</tabstop>
-  <tabstop>nomeText</tabstop>
-  <tabstop>marcaText</tabstop>
   <tabstop>catText</tabstop>
+  <tabstop>nomeText</tabstop>
   <tabstop>quantText</tabstop>
+  <tabstop>marcaText</tabstop>
   <tabstop>precoText</tabstop>
  </tabstops>
+ <resources/>
  <connections/>
 </ui>
