--- a/src/gui/MainMenu.ui
+++ b/src/gui/MainMenu.ui
@@ -83,7 +83,7 @@
      <enum>Qt::TextFormat::AutoText</enum>
     </property>
     <property name="pixmap">
-     <pixmap>../../../../../../../../../../../../.designer/backup/logo.png</pixmap>
+     <pixmap>../../../../../../../../../../../../../../../../../.designer/backup/logo.png</pixmap>
     </property>
    </widget>
    <widget class="QTabWidget" name="tabWidget">
@@ -96,7 +96,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="tabVistaGeral">
      <attribute name="title">
@@ -645,7 +645,7 @@
         <x>10</x>
         <y>10</y>
         <width>875</width>
-        <height>110</height>
+        <height>70</height>
        </rect>
       </property>
       <property name="title">
@@ -655,7 +655,7 @@
        <property name="geometry">
         <rect>
          <x>15</x>
-         <y>35</y>
+         <y>30</y>
          <width>161</width>
          <height>25</height>
         </rect>
@@ -668,7 +668,7 @@
        <property name="geometry">
         <rect>
          <x>195</x>
-         <y>35</y>
+         <y>32</y>
          <width>541</width>
          <height>25</height>
         </rect>
@@ -678,49 +678,13 @@
        <property name="geometry">
         <rect>
          <x>750</x>
-         <y>32</y>
+         <y>30</y>
          <width>100</width>
          <height>32</height>
         </rect>
        </property>
        <property name="text">
         <string>Aplicar</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="nomeLogoModBtn">
-       <property name="geometry">
-        <rect>
-         <x>750</x>
-         <y>67</y>
-         <width>100</width>
-         <height>32</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Aplicar</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="nomeLogoModLab">
-       <property name="geometry">
-        <rect>
-         <x>15</x>
-         <y>70</y>
-         <width>171</width>
-         <height>25</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Nome do lógotipo</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="nomeLogoModText">
-       <property name="geometry">
-        <rect>
-         <x>195</x>
-         <y>70</y>
-         <width>541</width>
-         <height>25</height>
-        </rect>
        </property>
       </widget>
      </widget>
@@ -728,9 +692,9 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>130</y>
+        <y>90</y>
         <width>875</width>
-        <height>191</height>
+        <height>190</height>
        </rect>
       </property>
       <property name="title">
@@ -826,7 +790,7 @@
          <bool>true</bool>
         </property>
        </widget>
-       <widget class="QPushButton" name="atualizarStockInfo">
+       <widget class="QPushButton" name="atualizarStockInfoBtn">
         <property name="geometry">
          <rect>
           <x>10</x>
